Fix collage clipping, change color theme

--- a/src/css/base/_global.scss
+++ b/src/css/base/_global.scss
@@ -1,12 +1,13 @@
 /* ---Global styles--- */
 
-$base-color: #c2e8ce;
+$base-color: #f3f4f5;
 $light-accent: #fff;
-$tertiary: #913d88;
-$dark-accent: #c50a1b;
-$emphasis: #1f3a93;
+$tertiary: #e86ce0;
+$secondary: #5b8dd7;
+$dark-accent: #2b0719;
+$emphasis: #2cd2ee;
 $hover-color: $tertiary;
-$neutral: #616161;
+$neutral: #8a8a8a;
 $highlight: $tertiary;
 $size: 174px;
 
@@ -22,14 +23,14 @@ body {
 
 h1 {
   color: $light-accent;
-  text-shadow: 1px 1px 2px $dark-accent;
+  text-shadow: 0 0 10px $tertiary, 0 0 7px $tertiary;
   font-size: 2.3em;
   margin: 10px 0;
 }
 
 h2 {
   color: $dark-accent;
-  margin-bottom: 15px;
+  margin: 15px 0;
 }
 
 button {
@@ -37,6 +38,7 @@ button {
   border: none;
   font-family: inherit;
   cursor: pointer;
+  font-size: 1em;
 }
 
 .app {
