--- a/src/css/base/_media_queries.scss
+++ b/src/css/base/_media_queries.scss
@@ -23,10 +23,6 @@
 }
 
 @media only screen and (min-height: 650px) {
-  body {
-    font-size: 1.2em;
-  }
-
   .collage button {
     width: 40px;
     padding: 4px 8px;
