--- a/src/css/collage/_structure.scss
+++ b/src/css/collage/_structure.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: lightgray;
+  background: lightgray;
   opacity: 0.8;
 }
 
@@ -32,26 +32,15 @@
   button {
     margin-bottom: 20px;
     width: 38px;
-    background-color: $emphasis;
+    background: $emphasis;
     padding: 3px 0;
     border-radius: 10px;
     font-size: 1.3em;
-    color: white;
     border: 1.5px solid $emphasis;
   }
 
-  button:focus {
-    border-color: $tertiary;
-    box-shadow: 0 0 3px $tertiary;
-  }
-
-  button:hover {
-    background-color: $tertiary;
-    border-color: $tertiary;
-  }
-
   button:disabled:hover {
-    background-color: $emphasis;
+    background: $emphasis;
     border-color: $emphasis;
   }
 }
@@ -91,6 +80,7 @@
     width: 0;
     z-index: 1;
     border-style: solid;
+    transform: scale(1.005);
   }
 
   .top {
@@ -99,13 +89,13 @@
     right: 0;
     margin: auto;
     border-color: white transparent transparent transparent;
+    transform-origin: 50% 100%;
   }
 
   .right {
-    top: 50%;
-    transform: translateY(-50%);
     right: 0;
     border-color: transparent white transparent transparent;
+    transform-origin: 0% 50%;
   }
 
   .bottom {
@@ -114,16 +104,22 @@
     right: 0;
     margin: auto;
     border-color: transparent transparent white transparent;
+    transform-origin: 50% 0%;
   }
 
   .left {
-    top: 50%;
-    transform: translateY(-50%);
     left: 0;
     border-color: transparent transparent transparent white;
+    transform-origin: 100% 50%;
+  }
+
+  .right,
+  .left {
+    top: 50%;
+    transform: translateY(-50%) scale(1.005);
   }
 }
 
 .blank-square {
-  background-color: transparent;
+  background: transparent;
 }
