--- a/src/css/menu/_selectionBox.scss
+++ b/src/css/menu/_selectionBox.scss
@@ -6,13 +6,11 @@
   p {
     color: $neutral;
     font-weight: bold;
-    font-size: 0.9em;
     margin: 8px 0;
   }
 }
 
 .selection-box {
-  border: 3px dashed $light-accent;
   height: 105px;
   padding: 7.5px 7.5px;
   box-sizing: border-box;
@@ -22,11 +20,15 @@
   justify-content: flex-start;
   align-items: stretch;
   overflow: auto;
+  background: white;
+  border: none;
+  border: 2px dashed lightgray;
 
   > div {
-    background-color: $light-accent;
+    background: $dark-accent;
     height: 20px;
-    border: solid $base-color 2.5px;
+    margin: 2.5px;
+    box-shadow: 0 0 5px $tertiary;
     display: flex;
     cursor: grab;
     position: relative;
@@ -40,9 +42,9 @@
   span {
     position: absolute;
     padding: 3px 3px 3px 5px;
-    font-size: 0.7em;
+    font-size: 0.875em;
     font-weight: bold;
-    color: $tertiary;
+    color: $light-accent;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
@@ -50,8 +52,8 @@
   }
 
   button {
-    color: $emphasis;
-    background-color: $light-accent;
+    color: $light-accent;
+    background: $dark-accent;
     width: 15px;
     display: flex;
     justify-content: flex-end;
@@ -63,7 +65,7 @@
 
   button:hover,
   button:focus {
-    color: $dark-accent;
+    color: $emphasis;
   }
 }
 
@@ -79,14 +81,13 @@
 }
 
 .selection-box::-webkit-scrollbar-track {
-  background-color: $light-accent;
+  background: $light-accent;
 }
 
 .selection-box::-webkit-scrollbar-thumb {
-  background-color: darkgray;
-  border-radius: 5px;
+  background: darkgray;
 }
 
 .selection-box::-webkit-scrollbar-thumb:hover {
-  background-color: gray;
+  background: gray;
 }
