--- a/src/css/menu/_shapeSelect.scss
+++ b/src/css/menu/_shapeSelect.scss
@@ -9,15 +9,16 @@
 
 .shape-btn {
   position: relative;
-  background-color: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0);
   font-size: 2em;
   padding: 0;
 
   svg {
     fill: transparent;
-    stroke: $light-accent;
+    stroke: $emphasis;
     stroke-width: 3.5;
-    transform: scale(1.3) translateY(3.5px);
+    transform-origin: top;
+    transform: scale(1.5);
   }
 
   > * {
@@ -25,7 +26,8 @@
   }
 }
 
-.shape-btn:hover svg {
+.shape-btn:hover svg,
+.shape-btn:focus svg {
   stroke: $tertiary;
 }
 
@@ -41,18 +43,13 @@
   align-items: flex-end;
 
   button {
-    background-color: $emphasis;
-    border: 1px solid $light-accent;
+    background: linear-gradient(to bottom, $emphasis, $secondary);
     border-radius: 10px;
     padding: 8px;
-    font-size: 1em;
+    font-size: 1.05em;
+    font-weight: bold;
     height: 40px;
     margin-top: 15px;
-  }
-
-  button:focus {
-    border-color: $highlight;
-    box-shadow: 0 0 3px $highlight;
   }
 
   .warning {
